--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -117,9 +117,9 @@ jobs:
   chaos-test:
     name: Run Chaos Tests
     runs-on: ubuntu-latest
+    needs: deploy
     # Only run chaos tests if deployment is enabled AND on main branch
-    if: github.ref == 'refs/heads/main' && env.ENABLE_DEPLOYMENT == 'true
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && env.ENABLE_DEPLOYMENT == 'true'
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
