--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,8 +68,8 @@ jobs:
     name: Deploy to Kubernetes
     runs-on: ubuntu-latest
     needs: build-and-push
-    # Only deploy if explicitly enabled AND on main branch
-    if: github.ref == 'refs/heads/main' && env.ENABLE_DEPLOYMENT == 'true'
+    # Deployment disabled - set to 'github.ref == 'refs/heads/main'' to enable
+    if: false
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -118,8 +118,8 @@ jobs:
     name: Run Chaos Tests
     runs-on: ubuntu-latest
     needs: deploy
-    # Only run chaos tests if deployment is enabled AND on main branch
-    if: github.ref == 'refs/heads/main' && env.ENABLE_DEPLOYMENT == 'true'
+    # Chaos tests disabled - set to 'github.ref == 'refs/heads/main'' to enable
+    if: false
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
