--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,8 +68,7 @@ jobs:
     name: Deploy to Kubernetes
     runs-on: ubuntu-latest
     needs: build-and-push
-    # Deployment disabled - set to 'github.ref == 'refs/heads/main'' to enable
-    if: false
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -118,8 +117,7 @@ jobs:
     name: Run Chaos Tests
     runs-on: ubuntu-latest
     needs: deploy
-    # Chaos tests disabled - set to 'github.ref == 'refs/heads/main'' to enable
-    if: false
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
