--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "axios": "^1.6.2",
+    "framer-motion": "^12.29.2",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.10.3",
+    "sweetalert2": "^11.26.17",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
