--- a/k8s/services/inventory-service-deployment.yaml
+++ b/k8s/services/inventory-service-deployment.yaml
@@ -50,6 +50,8 @@ spec:
           value: "redis.valerix.svc.cluster.local"
         - name: REDIS_PORT
           value: "6379"
+        - name: ENABLE_GPT5
+          value: "true"
         resources:
           requests:
             memory: "256Mi"
